# rusttest

./: .gitignore  .windsurfrules  CLAUDE.md  Cargo.toml  README.md  test_openrouter.rs  test_openrouter_integration.rs
.roo/rules/: AGENTS.md
examples/: openrouter_config.rs  openrouter_examples.rs  simple_openrouter.rs
src/: main.rs  nodes.rs  state.rs  thread.rs  thread_store_memory.rs  utils.rs
src/http/: thread_handlers.rs
