[package]
name = "pocketflow_template_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core flow framework
pocketflow_rs = "0.1"

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
